--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Tous les appartements : </h1>
+      <h1>Tous mes appartements : </h1>
         <% @flats.each do |flat| %>
         <div class="card">
           <div class="card-img-top">
@@ -28,8 +28,6 @@
   <div class="row">
     <div class="col">
       <%= link_to "Ajouter un nouvel appartement", new_flat_path %>
-      <br>
-      <%= link_to "Mes apparts", flats_path %>
     </div>
   </div>
 </div>
