--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <%= cl_image_tag @flat.photo, height: 300, width: 400, crop: :fill %>
       <h2><%= @flat.title %></h2>
       <p><%= @flat.description %></p>
       <% if policy(@flat).update? %>
