--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <% @flats.each do |flat| %>
         <div class="card">
           <div class="card-img-top">
-
+            <%= cl_image_tag flat.photo, height: 200, width: 600, crop: :fill %>
           </div>
           <div class="card-body">
             <div class="card-title">
