--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -4,6 +4,7 @@
       <%= simple_form_for @flat do |f| %>
         <%= f.input :title %>
         <%= f.input :description %>
+        <%= f.input :address %>
         <%= f.input :photo %>
         <%= f.input :photo_cache, as: :hidden %>
         <%= f.button :submit %>
