--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,6 +25,14 @@
     </div>
   </div>
 
+  <div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
+
   <div class="row">
     <div class="col">
       <%= link_to "Ajouter un nouvel appartement", new_flat_path %>
